--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport": "^0.3.2",
     "passport-oauth2-middleware": "^1.0.2",
     "passport-predix-oauth": "^0.1.2",
+    "predix-uaa-client": "^1.3.1",
     "ws": "^2.2.1"
   }
 }
